--- a/app/src/main/res/layout/activity_registro_usuario.xml
+++ b/app/src/main/res/layout/activity_registro_usuario.xml
@@ -4,6 +4,15 @@
     android:layout_height="fill_parent" android:padding="20dip" android:orientation="vertical">
 
     <EditText
+        android:id="@+id/txtDocuments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Ingrese su Documento"
+        android:inputType="number" />
+
+
+    <EditText
         android:id="@+id/txtUserName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
