--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/aqua"
+    android:orientation="vertical"
     android:padding="20dip">
 
     <TextView
@@ -21,11 +21,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="385dp"
-        android:layout_height="121dp"
-        android:background="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="110dp"
+        android:background="#0E0E0E"
         android:gravity="center"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@drawable/bienvenida1" />
 
     <EditText
         android:id="@+id/txtEmail"
@@ -38,12 +38,12 @@
 
     <EditText
         android:id="@+id/txtPass"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
+        android:layout_width="368dp"
+        android:layout_height="60dp"
         android:gravity="center"
-        android:textColor="@color/white"
         android:hint="@string/clave"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -61,21 +61,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dip"
         android:layout_marginBottom="40dip"
-        android:text="registrate!"
         android:gravity="center"
-        android:textSize="20dip"
-        android:textColor="@color/white"/>
+        android:text="registrate!"
+        android:textColor="@color/white"
+        android:textSize="20dip" />
 
-    <TextView android:id="@+id/login_error"
+    <TextView
+        android:id="@+id/login_error"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dip"
         android:layout_marginBottom="40dip"
         android:gravity="center"
-        android:textSize="20dip"
         android:textColor="@color/white"
-        />
-
+        android:textSize="20dip" />
 
 
 </LinearLayout>
